--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ scipy = "^1.14.1"
 scikit-learn = "^1.5.2"
 matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
+wt = "^2.1.1"
+pywavelets = "^1.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
