--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
 wt = "^2.1.1"
 pywavelets = "^1.7.0"
+ipykernel = "^6.29.5"
 
 
 [tool.poetry.group.dev.dependencies]
