--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ seaborn = "^0.13.2"
 wt = "^2.1.1"
 pywavelets = "^1.7.0"
 ipykernel = "^6.29.5"
+sympy = "^1.13.3"
 
 
 [tool.poetry.group.dev.dependencies]
