--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ wt = "^2.1.1"
 pywavelets = "^1.7.0"
 ipykernel = "^6.29.5"
 sympy = "^1.13.3"
+optuna = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
