--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "yes-science"
 version = "0.1.0"
 description = ""
 authors = ["LumbaBalumba <vlad.lazar.ik528@yandex.ru>"]
-readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
